2018-06-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Declare argument-less functions with "(void)"

	"f()" declaration form is K&R style, specifying that no information
	about the number or types of parameters is supplied. This caused
	warnings on '-Wstrict-prototypes' gcc option.

	* datrie/alpha-map.h, datrie/alpha-map.c (alpha_map_new):
	* datrie/darray.h, datrie/darray.c (da_new, symbols_new):
	* datrie/tail.h, datrie/tail.c (tail_new):
	* tests/utils.h, tests/utils.c (en_alpha_map_new, en_trie_new):
	  - Use "(void)" form in declaration
	  - Also use "(void)" form in definition, for consistency

	Thanks Peter Moulder for the initial patch.

2018-05-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Remove duplicate include

	* tools/trietool.c:
	  - Remove duplicate include <config.h>

2018-04-23  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Add missing include in test

	* tests/test_byte_alpha.c:
	  - Add missing include for utils.h

2018-04-23  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac:
	  - Bump library revision to reflect code changes.

	* NEWS:
	=== Version 0.2.11 ===

2018-04-21  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix reported segfault on full-range alpha map

	* tests/Makefile.am, +tests/test_byte_alpha.c:
	  - Add test case
	* datrie/alpha-map.c (alpha_map_recalc_work_area()):
	  - Redeclare trie_last as TrieIndex, to prevent overflow.

	Thanks Xiao Wang for the report, and @nevermatch for the analysis.

	Closes: #6
	https://github.com/tlwg/libdatrie/issues/6

2018-03-29  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix trie_state_get_data() at a prefix key

	When getting data from a state which terminates a key that is
	a prefix of another key, a terminator should be tried, so it
	jumps from DA to TAIL, where we can get the data.

	* tests/Makefile.am, +tests/test_term_state.c:
	  - Add a test case with {'ab', 'abc'} dictionary, which fails previous